RESOLVED FIXED282460
[macOS] Crash when attempting to present a context menu in the base system
https://bugs.webkit.org/show_bug.cgi?id=282460
Summary [macOS] Crash when attempting to present a context menu in the base system
Aditya Keerthi
Reported 2024-11-01 13:57:28 PDT
Attachments
Aditya Keerthi
Comment 1 2024-11-01 14:01:07 PDT
EWS
Comment 2 2024-11-01 15:21:05 PDT
Committed 286027@main (05914bb09405): <https://commits.webkit.org/286027@main> Reviewed commits have been landed. Closing PR #36060 and removing active labels.
EWS
Comment 3 2024-11-04 11:14:31 PST
Committed 283286.418@safari-7620-branch (1a8fca45bef3): <https://commits.webkit.org/283286.418@safari-7620-branch> Reviewed commits have been landed. Closing PR #2191 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.