[macOS] Crash when attempting to present a context menu in the base system https://bugs.webkit.org/show_bug.cgi?id=282460 rdar://137241729

Reviewed by Richard Robinson.

WritingToolsUI.framework is not available in the base system. Check it's
availability before attempting to use it.

* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::canHandleContextMenuWritingTools const):

Canonical link: https://commits.webkit.org/286027@main